--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -18,3 +18,8 @@
 .card__like-button:hover {
   opacity: 0.6;
 }
+.card_likes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
