--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -21,3 +21,22 @@
   right: 0;
   z-index: 10;
 }
+.popup_input-type-error {
+  border-bottom: 1px solid #FF0000;
+  margin-bottom: 0px; 
+}
+
+.form__input-error_active {
+  color:red;
+  font-size: 12px;
+
+}
+.button_inactive {
+background-color: transparent;
+color:  rgba(0, 0, 0, 0.15);
+border: 1px solid rgba(0, 0, 0, 0.15);
+  
+}
+.button_inactive:hover {
+  color:   white;
+  }
